# fp-homework-2020

./: README.md  stack.yaml
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1-second-chance/: LICENSE  README.md  hw1-second-chance.cabal
hw1-second-chance/src/Block6/: Task2.hs  Task3.hs  Task4.hs
hw1-second-chance/test/Block6/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
hw1/src/: NonEmpty.hs  Tree.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs  Task2.hs
hw1/src/Block6/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1/test/: NonEmptySpec.hs  TreeSpec.hs
hw1/test/Block1/: Task1Spec.hs  Task2Spec.hs  Task2Test.hs  Task3Spec.hs
hw1/test/Block2/: Task2Spec.hs
hw1/test/Block3/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block4/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block5/: Task1Spec.hs  Task2Spec.hs
hw2/: README.md  hw2.cabal
hw3/: README.md  hw3.cabal
hw4/: README.md  hw4.cabal
