name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Second Chance for Task 1 Block 6 for FP ITMO course

homepage:            https://github.com/tikhova/fp-homework/tree/master/hw1-second-chance#readme
license:             MIT
license-file:        LICENSE
author:              Tikhova Mariya
maintainer:          tikhovamariya@google.com
copyright:           2020 Tikhova Mariya

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6.Task1
                     , Block6.Task2 
                     , Block6.Task3
                     , Block6.Task4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite hw1-second-chance-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw1-second-chance
                     , hspec
                     , hedgehog
                     , QuickCheck
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Block6.Task1Spec
                     , Block6.Task2Spec
                     , Block6.Task3Spec
                     , Block6.Task4Spec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover