name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/tikhova/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Tikhova Mariya
maintainer:          tikhovamariya@google.com
copyright:           2020 Tikhova Mariya

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1
                     , Block1.Task2
                     , Block2.Task2
                     , Block3.Task1
                     , Block3.Task2   
                     , Block4.Task1
                     , Block4.Task2 
                     , Block5.Task1
                     , Block5.Task2  
                     , Block6.Task1
                     , Block6.Task2 
                     , Block6.Task3
                     , Block6.Task4
                     , Tree
                     , NonEmpty 
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw1
                     , hspec
                     , hedgehog
                     , QuickCheck
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Block1.Task1Spec
                     , Block1.Task2Spec
                     , Block2.Task2Spec
                     , Block3.Task1Spec
                     , Block3.Task2Spec
                     , Block4.Task1Spec
                     , Block4.Task2Spec
                     , Block5.Task1Spec
                     , TreeSpec
                     , NonEmptySpec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover